[gd_scene load_steps=60 format=2]

[ext_resource path="res://assets/sheets/player/mc_walkcat_side_0005.png" type="Texture" id=1]
[ext_resource path="res://scripts/MainCharacter.gd" type="Script" id=2]
[ext_resource path="res://assets/sheets/player/mc_walkcat_side_0006.png" type="Texture" id=3]
[ext_resource path="res://assets/sheets/player/mc_walkcat_side_0007.png" type="Texture" id=4]
[ext_resource path="res://assets/sheets/player/mc_walkfree_front_0001.png" type="Texture" id=5]
[ext_resource path="res://assets/sheets/player/mc_walkfree_front_0002.png" type="Texture" id=6]
[ext_resource path="res://assets/sheets/player/mc_walkfree_front_0000.png" type="Texture" id=7]
[ext_resource path="res://assets/sheets/player/mc_walkfree_front_0003.png" type="Texture" id=8]
[ext_resource path="res://assets/sheets/player/mc_walkfree_front_0004.png" type="Texture" id=9]
[ext_resource path="res://assets/sheets/player/mc_walkfree_side_0004.png" type="Texture" id=10]
[ext_resource path="res://assets/sheets/player/mc_walkfree_front_0005.png" type="Texture" id=11]
[ext_resource path="res://assets/sheets/player/mc_walkfree_side_0001.png" type="Texture" id=12]
[ext_resource path="res://assets/sheets/player/mc_walkfree_front_0006.png" type="Texture" id=13]
[ext_resource path="res://assets/sheets/player/mc_walkfree_front_0007.png" type="Texture" id=14]
[ext_resource path="res://assets/sheets/player/mc_walkfree_side_0002.png" type="Texture" id=15]
[ext_resource path="res://assets/sheets/player/mc_walkfree_side_0000.png" type="Texture" id=16]
[ext_resource path="res://assets/sheets/player/mc_walkfree_side_0003.png" type="Texture" id=17]
[ext_resource path="res://assets/sheets/player/mc_walkcat_front_0005.png" type="Texture" id=18]
[ext_resource path="res://assets/sheets/player/mc_walkcat_front_0006.png" type="Texture" id=19]
[ext_resource path="res://assets/sheets/player/mc_walkcat_back_0000.png" type="Texture" id=20]
[ext_resource path="res://assets/sheets/player/mc_walkcat_front_0002.png" type="Texture" id=21]
[ext_resource path="res://assets/sheets/player/mc_walkcat_front_0000.png" type="Texture" id=22]
[ext_resource path="res://assets/sheets/player/mc_walkcat_front_0007.png" type="Texture" id=23]
[ext_resource path="res://assets/sheets/player/mc_walkcat_back_0001.png" type="Texture" id=24]
[ext_resource path="res://assets/sheets/player/mc_walkcat_back_0002.png" type="Texture" id=25]
[ext_resource path="res://assets/sheets/player/mc_walkcat_front_0004.png" type="Texture" id=26]
[ext_resource path="res://assets/sheets/player/mc_walkcat_back_0003.png" type="Texture" id=27]
[ext_resource path="res://assets/sheets/player/mc_walkcat_back_0004.png" type="Texture" id=28]
[ext_resource path="res://assets/sheets/player/mc_walkcat_front_0001.png" type="Texture" id=29]
[ext_resource path="res://assets/sheets/player/mc_walkcat_front_0003.png" type="Texture" id=30]
[ext_resource path="res://assets/sheets/player/mc_walkfree_side_0005.png" type="Texture" id=31]
[ext_resource path="res://assets/sheets/player/mc_walkfree_back_0002.png" type="Texture" id=32]
[ext_resource path="res://assets/sheets/player/mc_walkfree_side_0006.png" type="Texture" id=33]
[ext_resource path="res://assets/sheets/player/mc_walkfree_back_0004.png" type="Texture" id=34]
[ext_resource path="res://assets/sheets/player/mc_walkfree_back_0003.png" type="Texture" id=35]
[ext_resource path="res://assets/sheets/player/mc_idlecat_back_0000.png" type="Texture" id=36]
[ext_resource path="res://assets/sheets/player/mc_idlefree_side_0000.png" type="Texture" id=37]
[ext_resource path="res://assets/sheets/player/mc_walkfree_back_0007.png" type="Texture" id=38]
[ext_resource path="res://assets/sheets/player/mc_walkfree_side_0007.png" type="Texture" id=39]
[ext_resource path="res://assets/sheets/player/mc_walkfree_back_0001.png" type="Texture" id=40]
[ext_resource path="res://assets/sheets/player/mc_walkfree_back_0005.png" type="Texture" id=41]
[ext_resource path="res://assets/sheets/player/mc_walkfree_back_0006.png" type="Texture" id=42]
[ext_resource path="res://assets/sheets/player/mc_idlefree_back_0000.png" type="Texture" id=43]
[ext_resource path="res://assets/sheets/player/mc_walkfree_back_0000.png" type="Texture" id=44]
[ext_resource path="res://assets/sheets/player/mc_idlecat_side_0000.png" type="Texture" id=45]
[ext_resource path="res://assets/sheets/player/mc_idlefree_front_0000.png" type="Texture" id=46]
[ext_resource path="res://assets/sheets/player/mc_walkcat_back_0006.png" type="Texture" id=47]
[ext_resource path="res://assets/sheets/player/mc_walkcat_back_0007.png" type="Texture" id=48]
[ext_resource path="res://assets/sheets/player/mc_walkcat_side_0001.png" type="Texture" id=49]
[ext_resource path="res://assets/sheets/player/mc_walkcat_side_0002.png" type="Texture" id=50]
[ext_resource path="res://assets/sheets/player/mc_walkcat_side_0003.png" type="Texture" id=51]
[ext_resource path="res://assets/sheets/player/mc_walkcat_back_0005.png" type="Texture" id=52]
[ext_resource path="res://assets/sheets/player/mc_walkcat_side_0000.png" type="Texture" id=53]
[ext_resource path="res://assets/sheets/player/mc_walkcat_side_0004.png" type="Texture" id=54]
[ext_resource path="res://assets/sheets/player/mc_idlecat_front_0000.png" type="Texture" id=55]
[ext_resource path="res://assets/music/mixkit-sweet-kitty-meow-93.wav" type="AudioStream" id=56]

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "GoDown",
"speed": 7.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 39 ) ],
"loop": true,
"name": "GoLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "IdleTop_Cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ) ],
"loop": true,
"name": "IdleDown_Cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 53 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "GoLeft_Cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "IdleTop",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 29 ), ExtResource( 21 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 23 ) ],
"loop": true,
"name": "GoDown_Cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 52 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": true,
"name": "GoTop_Cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": true,
"name": "IdleLeft_Cat",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 40 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 38 ) ],
"loop": true,
"name": "GoTop",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=18]
radius = 22.0

[sub_resource type="CircleShape2D" id=19]
radius = 34.0

[node name="MainCharacter" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 17 )
animation = "IdleDown"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 18 )

[node name="CatDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatDetection"]
position = Vector2( 0, -2 )
shape = SubResource( 19 )

[node name="CatPosition" type="Position2D" parent="."]

[node name="PickUpEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 56 )
volume_db = 6.0
pitch_scale = 1.2
